# aniFileExtractor

./: .gitignore  CMakeLists.txt  README.md  aniFileExtractor.cpp  aniFileExtractor.hpp  printFileInformation.hpp  run.sh
.github/workflows/: c-cpp.yml
test/: test.ani
